--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Constants\SubscriptionTeir.cs" />
     <Compile Include="Constants\TitleEntryFlags.cs" />
     <Compile Include="Constants\TransferFlags.cs" />
+    <Compile Include="Constants\UsbDeviceChange.cs" />
     <Compile Include="Constants\VolumeDescriptorType.cs" />
     <Compile Include="Constants\XboxLiveServiceProvider.cs" />
     <Compile Include="Exceptions\ModelFactoryException.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Io\Gpd\Entries\SettingList.cs" />
     <Compile Include="Io\Gpd\Entries\TitleEntry.cs" />
     <Compile Include="Io\ReparsePoint.cs" />
+    <Compile Include="Io\UsbNotification.cs" />
     <Compile Include="Models\BinMap.cs" />
     <Compile Include="Io\Stfs\Data\AvatarItemMediaInfo.cs" />
     <Compile Include="Io\Stfs\Data\CachedUserFlags.cs" />
