--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -51,7 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>app.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\app.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ftp, Version=2.0.13217.1550, Culture=neutral, PublicKeyToken=6dc438ab78a525b3, processorArchitecture=MSIL">
@@ -515,14 +515,8 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\app.ico" />
     <Resource Include="Resources\window.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\drive_flash.png" />
