--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
@@ -53,6 +53,9 @@
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="U2UConsult.RichHtmlTextBlock">
+      <HintPath>..\packages\U2UConsult.RichHtmlTextBlock\U2UConsult.RichHtmlTextBlock.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +65,7 @@
     <Compile Include="Controls\ProgressIndicator.xaml.cs">
       <DependentUpon>ProgressIndicator.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\RichTextBox.cs" />
     <Compile Include="Controls\Rollover.xaml.cs">
       <DependentUpon>Rollover.xaml</DependentUpon>
     </Compile>
@@ -93,6 +97,11 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\IconExtensions.cs" />
     <Compile Include="Extensions\StfsPackageExtensions.cs" />
+    <Compile Include="Formatters\HtmlFormatter.cs" />
+    <Compile Include="Formatters\ITextFormatter.cs" />
+    <Compile Include="Formatters\PlainTextFormatter.cs" />
+    <Compile Include="Formatters\RtfFormatter.cs" />
+    <Compile Include="Formatters\XamlFormatter.cs" />
     <Compile Include="Infrastructure\AsyncResult.cs" />
     <Compile Include="Infrastructure\BindingProxy.cs" />
     <Compile Include="Infrastructure\Constants\LoadCommand.cs" />
