--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -87,9 +87,6 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="U2UConsult.RichHtmlTextBlock">
-      <HintPath>..\packages\U2UConsult.RichHtmlTextBlock\U2UConsult.RichHtmlTextBlock.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -132,6 +129,7 @@
     <Compile Include="Converters\TransferTypeConverter.cs" />
     <Compile Include="Events\ActivePaneChangedEvent.cs" />
     <Compile Include="Events\CloseNestedPaneEvent.cs" />
+    <Compile Include="Events\NotifyUserMessageEvent.cs" />
     <Compile Include="Events\UsbDeviceChangedEvent.cs" />
     <Compile Include="Events\TransferActionStartedEvent.cs" />
     <Compile Include="Events\OpenNestedPaneEvent.cs" />
@@ -157,6 +155,7 @@
     <Compile Include="Constants\FileBlockHealthStatus.cs" />
     <Compile Include="ViewModels\FileBlockViewModel.cs" />
     <Compile Include="ViewModels\FileEntryViewModel.cs" />
+    <Compile Include="ViewModels\UserMessageViewModel.cs" />
     <Compile Include="ViewModels\ProfileRebuilderViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\InputDialogOptionViewModel.cs" />
