--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Exceptions\TransferException.cs" />
     <Compile Include="Interfaces\IFileListPaneViewModel.cs" />
     <Compile Include="Interfaces\IFileManager.cs" />
+    <Compile Include="Interfaces\IUserMessageViewModel.cs" />
     <Compile Include="Models\CacheComplexKey.cs" />
     <Compile Include="Models\FileListPaneSettings.cs" />
     <Compile Include="Models\ProfileItemWrapper.cs" />
@@ -157,6 +158,7 @@
     <Compile Include="Primitives\DialogBase.cs" />
     <Compile Include="ViewModels\CompressedFileContentViewModel.cs" />
     <Compile Include="Constants\FileBlockHealthStatus.cs" />
+    <Compile Include="ViewModels\NoMessagesViewModel.cs" />
     <Compile Include="ViewModels\FileBlockViewModel.cs" />
     <Compile Include="ViewModels\FileEntryViewModel.cs" />
     <Compile Include="ViewModels\UserMessageViewModel.cs" />
@@ -241,9 +243,11 @@
     <Compile Include="Views\FileManagerWindow.xaml.cs">
       <DependentUpon>FileManagerWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TemplateSelectors\CloseButtonsTemplateSelector.cs" />
-    <Compile Include="Views\TemplateSelectors\CellEditingTemplateSelector.cs" />
-    <Compile Include="Views\TemplateSelectors\PaneTemplateSelector.cs" />
+    <Compile Include="Views\Selectors\CloseButtonsTemplateSelector.cs" />
+    <Compile Include="Views\Selectors\CellEditingTemplateSelector.cs" />
+    <Compile Include="Views\Selectors\MessageStyleSelector.cs" />
+    <Compile Include="Views\Selectors\MessageTemplateSelector.cs" />
+    <Compile Include="Views\Selectors\PaneTemplateSelector.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
