--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Constants\CopyActionScope.cs" />
     <Compile Include="Constants\CopyMode.cs" />
     <Compile Include="Constants\ErrorResolutionBehavior.cs" />
+    <Compile Include="Constants\FtpServerType.cs" />
     <Compile Include="Constants\FtpTransferDirection.cs" />
     <Compile Include="Constants\ItemType.cs" />
     <Compile Include="Constants\MessageFlags.cs" />
