--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -206,6 +206,9 @@
     <Compile Include="Views\Controls\ProgressNotificationBar.xaml.cs">
       <DependentUpon>ProgressNotificationBar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Dialogs\UserStatisticsParticipationDialog.xaml.cs">
+      <DependentUpon>UserStatisticsParticipationDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Dialogs\MigrationProgressDialog.xaml.cs">
       <DependentUpon>MigrationProgressDialog.xaml</DependentUpon>
     </Compile>
@@ -314,6 +317,10 @@
     <Page Include="Views\Controls\ProgressNotificationBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Dialogs\UserStatisticsParticipationDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Dialogs\MigrationProgressDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -535,7 +542,7 @@
     <Resource Include="Resources\refresh_folder.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Description.txt">
+    <Resource Include="Resources\About.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
@@ -568,6 +575,11 @@
     <Resource Include="Resources\pause.png" />
     <Resource Include="Resources\play.png" />
     <Resource Include="Resources\stop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\UserStatisticsParticipation.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
