--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\System.Windows.Interactivity.dll</HintPath>
+      <HintPath>..\packages\System.Windows.Interactivity\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
