--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Constants\CopyActionScope.cs" />
     <Compile Include="Constants\CopyMode.cs" />
     <Compile Include="Constants\ErrorResolutionBehavior.cs" />
+    <Compile Include="Constants\FsdContentScanTrigger.cs" />
     <Compile Include="Constants\FtpServerType.cs" />
     <Compile Include="Constants\FtpTransferDirection.cs" />
     <Compile Include="Constants\ItemType.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="ContentProviders\StfsPackageContent.cs" />
     <Compile Include="ContentProviders\TitleRecognizer.cs" />
     <Compile Include="Converters\ContentTypeConverter.cs" />
+    <Compile Include="Converters\LocalizedEnumConverter.cs" />
     <Compile Include="Converters\ResxConverter.cs" />
     <Compile Include="Converters\FileBlockHealthStatusConverter.cs" />
     <Compile Include="Converters\ExpirationConverter.cs" />
